--- a/exsim12/M7,1S100K0,047.in
+++ b/exsim12/M7,1S100K0,047.in
@@ -1,6 +1,6 @@
 !Input file for program EXSIM12
 !Title
-  M7.1, filename:M7,1S100K0,047.in. Created on 2022-03-30. 
+  M7.1, filename:M7,1S100K0,047.in. Created on 2022-03-31. 
 !Write acc, psa, husid files for each site?
  Y 
 !MW, Stress, flag (0=fmax; 1=kappa), fmax or kappa
@@ -72,9 +72,9 @@
 !Output file names stem:
   M7,1S100K0,047 
 !Name of crustal amplification file:
-  crustal_dzc.txt 
+  crustal_amp_tutorial.txt 
 !Name of site amplification file:
-  site_amps_dzc.txt 
+  site_amp_tutorial.txt 
 !Name of empirical filter file:
   empirical_amps.txt 
 !DynamicFlag (0=no; use 1 for dynamic corner freq), PulsingPercent (typical 50.)
