Added unnecessary files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 /inputs/
-/example.py
 /EXSIM12-readme.pdf
 /NOTES_TO_MYSELF.txt
 /exsim12/ACC/
+/exsim12/other/
+/exsim12/PSA/
+NOTES_TO_MYSELF.txt
+recorded.txt
+trial.py
+
